--- a/Sistemas_de_recomendación_Ejercicio_2.ipynb
+++ b/Sistemas_de_recomendación_Ejercicio_2.ipynb
@@ -33,7 +33,11 @@
       },
       "cell_type": "markdown",
       "source": [
-        "## Ejercicio 2"
+        "## Ejercicio 2\n",
+        "\n",
+        "**Francisco Javier Tébar Martínez**\n",
+        "\n",
+        "29/04/2019"
       ]
     },
     {
