--- a/dogsVScats_francisco_javier_tebar_martinez.ipynb
+++ b/dogsVScats_francisco_javier_tebar_martinez.ipynb
@@ -32,8 +32,8 @@
    },
    "source": [
     "<table><tr>\n",
-    "    <td><img src=\"https://raw.githubusercontent.com/fjtm/Data/master/img/doge.jpg\"   height=\"400\" width=\"400\"></td>\n",
-    "    <td><img src=\"https://raw.githubusercontent.com/fjtm/Data/master/img/cat.jpg\" height=\"400\" width=\"400\"></td>\n",
+    "    <td><img src=\"https://raw.githubusercontent.com/fjtm/deep_learning_imagenes/master/img/doge.jpg\"   height=\"400\" width=\"400\"></td>\n",
+    "    <td><img src=\"https://raw.githubusercontent.com/fjtm/deep_learning_imagenes/master/img/cat.jpg\" height=\"400\" width=\"400\"></td>\n",
     "</tr></table>"
    ]
   },
@@ -76,7 +76,7 @@
    "source": [
     "Throughout this notebook you will find empty cells that you will need to fill with your own code. Follow the instructions in the notebook and pay special attention to the following symbols.\n",
     "\n",
-    "<img src=\"https://raw.githubusercontent.com/fjtm/Data/master/img/question.png\" height=\"80\" width=\"80\" style=\"float: right;\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/fjtm/deep_learning_imagenes/master/img/question.png\" height=\"80\" width=\"80\" style=\"float: right;\"/>\n",
     "\n",
     "***\n",
     "\n",
@@ -93,7 +93,7 @@
     "id": "Z6H02C1Qt5Y6"
    },
    "source": [
-    "<img src=\"https://raw.githubusercontent.com/fjtm/Data/master/img/exclamation.png\" height=\"80\" width=\"80\" style=\"float: right;\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/fjtm/deep_learning_imagenes/master/img/exclamation.png\" height=\"80\" width=\"80\" style=\"float: right;\"/>\n",
     "\n",
     "***\n",
     "<font color=#2655ad>\n",
@@ -110,7 +110,7 @@
     "id": "m4nU5GyHt5Y7"
    },
    "source": [
-    "<img src=\"https://raw.githubusercontent.com/fjtm/Data/master/img/pro.png\" height=\"80\" width=\"80\" style=\"float: right;\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/fjtm/deep_learning_imagenes/master/img/pro.png\" height=\"80\" width=\"80\" style=\"float: right;\"/>\n",
     "\n",
     "***\n",
     "<font color=#259b4c>\n",
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -177,15 +177,7 @@
     "id": "eAKEeFNyI4gv",
     "outputId": "c651c557-1124-409f-ad8d-3bf5c488f205"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import glob\n",
     "from skimage.transform import resize\n",
@@ -225,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -235,24 +227,9 @@
     "id": "7rygooxq8_Iv",
     "outputId": "ff911eea-be3a-4246-a129-9747d4f1f0cc"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cloning into 'Data'...\n",
-      "remote: Enumerating objects: 36, done.\u001b[K\n",
-      "remote: Counting objects: 100% (36/36), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (32/32), done.\u001b[K\n",
-      "remote: Total 25047 (delta 12), reused 20 (delta 4), pack-reused 25011\u001b[K\n",
-      "Receiving objects: 100% (25047/25047), 613.43 MiB | 44.49 MiB/s, done.\n",
-      "Resolving deltas: 100% (15/15), done.\n",
-      "Checking out files: 100% (25010/25010), done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!git clone --recursive https://github.com/fjtm/Data.git"
+    "!git clone --recursive https://github.com/fjtm/deep_learning_imagenes.git"
    ]
   },
   {
@@ -305,7 +282,7 @@
    },
    "outputs": [],
    "source": [
-    "image = imread(\"Data/img/sample.jpg\")"
+    "image = imread(\"deep_learning_imagenes/img/sample.jpg\")"
    ]
   },
   {
@@ -470,7 +447,7 @@
    },
    "source": [
     "\n",
-    "<img src=\"https://raw.githubusercontent.com/fjtm/Data/master/img/question.png\" height=\"80\" width=\"80\" style=\"float: right;\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/fjtm/deep_learning_imagenes/master/img/question.png\" height=\"80\" width=\"80\" style=\"float: right;\"/>\n",
     "\n",
     "***\n",
     "\n",
@@ -495,7 +472,7 @@
     "id": "Cc2kxupAt5ZZ"
    },
    "source": [
-    "<img src=\"https://raw.githubusercontent.com/fjtm/Data/master/img/exclamation.png\" height=\"80\" width=\"80\" style=\"float: right;\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/fjtm/deep_learning_imagenes/master/img/exclamation.png\" height=\"80\" width=\"80\" style=\"float: right;\"/>\n",
     "\n",
     "***\n",
     "<font color=#2655ad>\n",
@@ -717,7 +694,7 @@
     "id": "NWo1RoOSt5aA"
    },
    "source": [
-    "<img src=\"https://raw.githubusercontent.com/fjtm/Data/master/img/question.png\" height=\"80\" width=\"80\" style=\"float: right;\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/fjtm/deep_learning_imagenes/master/img/question.png\" height=\"80\" width=\"80\" style=\"float: right;\"/>\n",
     "\n",
     "***\n",
     "<font color=#ad3e26>\n",
@@ -1759,7 +1736,7 @@
     "id": "25_Ql0slt5bM"
    },
    "source": [
-    "<img src=\"https://raw.githubusercontent.com/fjtm/Data/master/img/pro.png\" height=\"80\" width=\"80\" style=\"float: right;\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/fjtm/deep_learning_imagenes/master/img/pro.png\" height=\"80\" width=\"80\" style=\"float: right;\"/>\n",
     "\n",
     "***\n",
     "\n",
@@ -2210,10 +2187,10 @@
     "<td style=\"height:200px;\">\n",
     "    <table>\n",
     "         <tr>\n",
-    "              <td><img src=\"https://raw.githubusercontent.com/fjtm/Data/master/img/vgg16.png\"   height=\"200\" width=\"800\"></td>   \n",
+    "              <td><img src=\"https://raw.githubusercontent.com/fjtm/deep_learning_imagenes/master/img/vgg16.png\"   height=\"200\" width=\"800\"></td>   \n",
     "         </tr>\n",
     "         <tr>\n",
-    "              <td><img src=\"https://raw.githubusercontent.com/fjtm/Data/master/img/vgg16-1-e1542731207177.png\" height=\"400\" width=\"800\"></td>\n",
+    "              <td><img src=\"https://raw.githubusercontent.com/fjtm/deep_learning_imagenes/master/img/vgg16-1-e1542731207177.png\" height=\"400\" width=\"800\"></td>\n",
     "         </tr>\n",
     "    </table>\n",
     "</td>"
@@ -2385,7 +2362,7 @@
     "id": "9utSD_3wt5be"
    },
    "source": [
-    "<img src=\"https://raw.githubusercontent.com/fjtm/Data/master/img/question.png\" height=\"80\" width=\"80\" style=\"float: right;\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/fjtm/deep_learning_imagenes/master/img/question.png\" height=\"80\" width=\"80\" style=\"float: right;\"/>\n",
     "\n",
     "***\n",
     "\n",
@@ -2566,7 +2543,7 @@
     "id": "wZjRHTJEt5bg"
    },
    "source": [
-    "<img src=\"https://raw.githubusercontent.com/fjtm/Data/master/img/question.png\" height=\"80\" width=\"80\" style=\"float: right;\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/fjtm/deep_learning_imagenes/master/img/question.png\" height=\"80\" width=\"80\" style=\"float: right;\"/>\n",
     "\n",
     "***\n",
     "\n",
@@ -2634,18 +2611,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.8"
   },
   "toc": {
    "base_numbering": 1,
